--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "php_assignment",
+  "name": "notezilla",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
